server/src/logs/filelog-exceptions.log
2015-07-03T13:06:29.049Z - error: uncaughtException: /Users/albertkovalevskij/work/imageService/src/check-if-checksum-exist-on-s3.js:19
      logger.log('info', 'Image with checksum %s already uploaded', checksum);
                                                                             ^
Unexpected token ; date=Fri Jul 03 2015 16:06:29 GMT+0300 (EEST), pid=57373, uid=501, gid=20, cwd=/Users/albertkovalevskij/work/imageService/src, execPath=/usr/local/bin/node, version=v0.12.5, argv=[node, /Users/albertkovalevskij/work/imageService/src/index.js], rss=57241600, heapTotal=31610112, heapUsed=18875536, loadavg=[1.4072265625, 1.38330078125, 1.3154296875], uptime=271227, trace=[column=16, file=vm.js, function=exports.runInThisContext, line=73, method=runInThisContext, native=false, column=25, file=module.js, function=Module._compile, line=443, method=_compile, native=false, column=10, file=module.js, function=Object.Module._extensions..js, line=478, method=Module._extensions..js, native=false, column=32, file=module.js, function=Module.load, line=355, method=load, native=false, column=12, file=module.js, function=Function.Module._load, line=310, method=Module._load, native=false, column=17, file=module.js, function=Module.require, line=365, method=require, native=false, column=17, file=module.js, function=require, line=384, method=null, native=false, column=28, file=/Users/albertkovalevskij/work/imageService/src/process-request.js, function=, line=3, method=null, native=false, column=26, file=module.js, function=Module._compile, line=460, method=_compile, native=false, column=10, file=module.js, function=Object.Module._extensions..js, line=478, method=Module._extensions..js, native=false], stack=[/Users/albertkovalevskij/work/imageService/src/check-if-checksum-exist-on-s3.js:19,       logger.log('info', 'Image with checksum %s already uploaded', checksum);,                                                                              ^, SyntaxError: Unexpected token ;,     at exports.runInThisContext (vm.js:73:16),     at Module._compile (module.js:443:25),     at Object.Module._extensions..js (module.js:478:10),     at Module.load (module.js:355:32),     at Function.Module._load (module.js:310:12),     at Module.require (module.js:365:17),     at require (module.js:384:17),     at Object.<anonymous> (/Users/albertkovalevskij/work/imageService/src/process-request.js:3:28),     at Module._compile (module.js:460:26),     at Object.Module._extensions..js (module.js:478:10)]
2015-07-03T13:14:45.986Z - error: uncaughtException: /Users/albertkovalevskij/work/imageService/src/check-if-checksum-exist-on-s3.js:19
      logger.log('info', 'Image with checksum %s already uploaded', checksum);
                                                                             ^
Unexpected token ; date=Fri Jul 03 2015 16:14:45 GMT+0300 (EEST), pid=57876, uid=501, gid=20, cwd=/Users/albertkovalevskij/work/imageService/src, execPath=/usr/local/bin/node, version=v0.12.5, argv=[node, /Users/albertkovalevskij/work/imageService/src/index.js], rss=57659392, heapTotal=31610112, heapUsed=18743088, loadavg=[1.4326171875, 1.390625, 1.3330078125], uptime=271723, trace=[column=16, file=vm.js, function=exports.runInThisContext, line=73, method=runInThisContext, native=false, column=25, file=module.js, function=Module._compile, line=443, method=_compile, native=false, column=10, file=module.js, function=Object.Module._extensions..js, line=478, method=Module._extensions..js, native=false, column=32, file=module.js, function=Module.load, line=355, method=load, native=false, column=12, file=module.js, function=Function.Module._load, line=310, method=Module._load, native=false, column=17, file=module.js, function=Module.require, line=365, method=require, native=false, column=17, file=module.js, function=require, line=384, method=null, native=false, column=28, file=/Users/albertkovalevskij/work/imageService/src/process-request.js, function=, line=3, method=null, native=false, column=26, file=module.js, function=Module._compile, line=460, method=_compile, native=false, column=10, file=module.js, function=Object.Module._extensions..js, line=478, method=Module._extensions..js, native=false], stack=[/Users/albertkovalevskij/work/imageService/src/check-if-checksum-exist-on-s3.js:19,       logger.log('info', 'Image with checksum %s already uploaded', checksum);,                                                                              ^, SyntaxError: Unexpected token ;,     at exports.runInThisContext (vm.js:73:16),     at Module._compile (module.js:443:25),     at Object.Module._extensions..js (module.js:478:10),     at Module.load (module.js:355:32),     at Function.Module._load (module.js:310:12),     at Module.require (module.js:365:17),     at require (module.js:384:17),     at Object.<anonymous> (/Users/albertkovalevskij/work/imageService/src/process-request.js:3:28),     at Module._compile (module.js:460:26),     at Object.Module._extensions..js (module.js:478:10)]
2015-07-03T13:14:58.131Z - error: uncaughtException: /Users/albertkovalevskij/work/imageService/src/check-if-checksum-exist-on-s3.js:19
      logger.log('info', 'Image with checksum %s already uploaded', checksum);
                                                                             ^
Unexpected token ; date=Fri Jul 03 2015 16:14:58 GMT+0300 (EEST), pid=57889, uid=501, gid=20, cwd=/Users/albertkovalevskij/work/imageService/src, execPath=/usr/local/bin/node, version=v0.12.5, argv=[node, /Users/albertkovalevskij/work/imageService/src/index.js], rss=55975936, heapTotal=31610112, heapUsed=16222024, loadavg=[1.36572265625, 1.376953125, 1.3291015625], uptime=271736, trace=[column=16, file=vm.js, function=exports.runInThisContext, line=73, method=runInThisContext, native=false, column=25, file=module.js, function=Module._compile, line=443, method=_compile, native=false, column=10, file=module.js, function=Object.Module._extensions..js, line=478, method=Module._extensions..js, native=false, column=32, file=module.js, function=Module.load, line=355, method=load, native=false, column=12, file=module.js, function=Function.Module._load, line=310, method=Module._load, native=false, column=17, file=module.js, function=Module.require, line=365, method=require, native=false, column=17, file=module.js, function=require, line=384, method=null, native=false, column=28, file=/Users/albertkovalevskij/work/imageService/src/process-request.js, function=, line=3, method=null, native=false, column=26, file=module.js, function=Module._compile, line=460, method=_compile, native=false, column=10, file=module.js, function=Object.Module._extensions..js, line=478, method=Module._extensions..js, native=false], stack=[/Users/albertkovalevskij/work/imageService/src/check-if-checksum-exist-on-s3.js:19,       logger.log('info', 'Image with checksum %s already uploaded', checksum);,                                                                              ^, SyntaxError: Unexpected token ;,     at exports.runInThisContext (vm.js:73:16),     at Module._compile (module.js:443:25),     at Object.Module._extensions..js (module.js:478:10),     at Module.load (module.js:355:32),     at Function.Module._load (module.js:310:12),     at Module.require (module.js:365:17),     at require (module.js:384:17),     at Object.<anonymous> (/Users/albertkovalevskij/work/imageService/src/process-request.js:3:28),     at Module._compile (module.js:460:26),     at Object.Module._extensions..js (module.js:478:10)]
2015-07-03T13:48:53.928Z - error: uncaughtException: ENOENT, open '../uploads/978b068a6a1302ca9d04d02db45bf5b6_thumbnail.png' date=Fri Jul 03 2015 16:48:53 GMT+0300 (EEST), pid=59999, uid=501, gid=20, cwd=/Users/albertkovalevskij/work/imageService/src, execPath=/usr/local/bin/node, version=v0.12.5, argv=[node, /Users/albertkovalevskij/work/imageService/src/index.js], rss=64724992, heapTotal=34681856, heapUsed=23304824, loadavg=[1.39599609375, 1.3232421875, 1.3251953125], uptime=273771, trace=[column=null, file=null, function=Error, line=null, method=null, native=true], stack=[Error: ENOENT, open '../uploads/978b068a6a1302ca9d04d02db45bf5b6_thumbnail.png',     at Error (native)]
